# MySwigDemo

./: README.md  c-extract-structs.py  settings.gradle  swig.sh
app/: build.gradle
app/src/androidTest/java/io/rong/rust/myswigdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/rong/rust/myswigdemo/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/rong/rust/myswigdemo/: ExampleUnitTest.kt
docs/: swig.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
imlibV2/: .gitignore  build.gradle
imlibV2/src/androidTest/java/io/rong/rust/imlibv2/: ExampleInstrumentedTest.java
imlibV2/src/main/cpp/: CMakeLists.txt  ConnectCallback.h  NativeIntListener.h  NativeSendMessageCallback.h  RcClient.cpp  RcClient.h  RcClient.i  RcClient_wrap.cpp  RcClient_wrap.h  RcimNativeFunctionDefine.h  example.c  example.h  example_wrap.c  imlibv2.cpp  rc_adapter.cpp  rc_adapter.h  rc_adapter.i  rc_adapter_wrap.cpp  rc_adapter_wrap.h
imlibV2/src/main/cpp/jni_header/: NativeIntListener_jni.h  NativeSendMessageCallback_jni.h  NativeStringCallback_jni.h
imlibV2/src/main/cpp/jni_helper/: jni_onload.cc  jvm.cc  jvm.h
imlibV2/src/main/cpp/native_define/: NativeSendMessageCallback.h  NativeStringCallback.h  RcimNativeIntListener.h  RcimNativeSendMessageCallback.h  RcimNativeStringCallback.h
imlibV2/src/main/cpp/swig/: base.i  extracted_struct_define.h  struct_define.i
imlibV2/src/main/cpp/swig2/: rcim_client.i  rcim_client_wrap.cxx
imlibV2/src/main/cpp/util/: Context.cpp  Context.h  Transformer.cpp  Transformer.h
imlibV2/src/main/java/io/rong/: NativeClient.java
imlibV2/src/main/java/io/rong/imlib/: IMClient.java
imlibV2/src/main/java/io/rong/imlib/message/: Message.java
imlibV2/src/main/java/io/rong/imlib/swig/: ConnectCallback.java  MapString.java  NativeIntListener.java  NativeSendMessageCallback.java  NativeStringCallback.java  RcClient.java  RcClientJNI.java  RcimAndroidConfig.java  RcimEngineBuilderParam.java  RcimHarmonyConfig.java  RcimIosConfig.java  RcimMessageBox.java  RcimNativeIntListener.java  RcimNativeSendMessageCallback.java  RcimNativeStringCallback.java  RcimPushConfig.java  RcimReadReceiptInfo.java  RcimReadReceiptInfoV2.java  RcimReadReceiptUserInfo.java  RcimReceivedStatus.java  RcimSDKVersion.java  VectorInt.java  VectorLong.java  rc_adapter.java  rc_adapterJNI.java
(+49 files in other folders)
